fix SEO color contrast

--- a/src/assets/styles/components/_experiences.scss
+++ b/src/assets/styles/components/_experiences.scss
@@ -40,7 +40,7 @@
             cursor: pointer;
 
             &_title {
-                color: $sub-title-color;
+                color: $black;
                 line-height: 1.4;
             }
         }
